update readme and corrected names in pom

--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>de.ballay.vaadintest</groupId>
-    <artifactId>vaadintest</artifactId>
-    <name>VaadinTest</name>
+    <groupId>de.ballay.rasp</groupId>
+    <artifactId>raspi-radio</artifactId>
+    <name>raspi-radio</name>
     <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
